manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-backend
  namespace: microservices-eCommerce
  labels:
    app: micros
spec:
  replicas: 2
  selector:
    matchLabels:
      app: micros
  template:
    metadata:
      labels:
        app: micros
    spec:
      containers:
      - name: products-service
        image: contenedoresjg12345.azurecr.io/products-service:latest
        ports:
        - containerPort: 8083
