manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: microservices-eCommerce
spec:
  type: ClutsterIP
  selector:
    app: api-gateway
  ports:
    - name: api-gateway
      protocol: TCP
      port: 8080
      targetPort: 8080 
    - name: inventory-service
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: orders-service
      protocol: TCP
      port: 8082
      targetPort: 8082
    - name: product-service
      protocol: TCP
      port: 8083
      targetPort: 8083
    - name: keycloak
      protocol: TCP
      port: 8181
      targetPort: 8181
    - name : notification-service
      protocol: TCP
      port: 0
      targetPort: 0
