manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: microservices-eCommerce
spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
        - path: /api/v1/orders
          pathType: Prefix
          backend:
            service:
              name: orders-service
              port:
                number: 8082
        - path: /api/v1/inventory
          pathType: Prefix
          backend:
            service:
              name: inventory-service
              port:
                number: 8081
        - path: /api/v1/products
          pathType: Prefix
          backend:
            service:
              name: product-service
              port:
                number: 8083
        - path: /auth
          pathType: Prefix
          backend:
            service:
              name: keycloak
              port:
                number: 8181
        - path: /api/v1/notifications
          pathType: Prefix
          backend:
            service:
              name: notification-service
              port:
                number: 0
